--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "curso-iniciando-ionic2",
-  "app_id": "",
+  "app_id": "453419a6",
   "v2": true,
   "typescript": true,
   "DefaultBrowser": "chrome"
