--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "my-first-app",
-  "app_id": "",
+  "app_id": "1e97a2f4",
   "v2": true,
   "typescript": true,
   "DefaultBrowser": "chrome"
