--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,7 +1,10 @@
 {
   "name": "my-first-app",
-  "app_id": "1e97a2f4",
-  "v2": true,
-  "typescript": true,
-  "DefaultBrowser": "chrome"
+  "app_id": "18e3f0f6",
+  "DefaultBrowser": "chrome",
+  "integrations": {
+    "gulp": {}
+  },
+  "type": "ionic-angular",
+  "watchPatterns": []
 }
